fixed spacing issues for buttons

--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -79,9 +79,9 @@
     align-items: center;
     align-content: center;
     height: 50px;
-    grid-gap: 31%;
+    gap: 70%;
     font-size: 22px;
-    justify-content: space-around;
+    justify-content: center;
     background: linear-gradient(to top, rgb(199,194,194, 0) , rgb(51 51 52 / 75%));
 }
 
@@ -305,4 +305,10 @@
     justify-content: center;
     align-items: center;
 
+}
+
+.splash-buttons-cont {
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
