--- a/frontend/src/components/ShowBusinesses/ShowBusinesses.css
+++ b/frontend/src/components/ShowBusinesses/ShowBusinesses.css
@@ -113,5 +113,5 @@
 }
 
 .star-rating-all-div {
-    width: 80%;
+    width: 75%;
 }
